--- a/pages/actions/students_page.html
+++ b/pages/actions/students_page.html
@@ -27,7 +27,7 @@
                                 `                <td>${resText[i].Second_name}</td>\n` +
                                 `                <td>${resText[i].Group}</td>\n` +
                                 "                <td><input type='button' value='Перейти'\n" +
-                                `                           onclick="window.location.href = '/student/${resText[i].Student_Id}'"/></td>\n` +
+                                `                           onclick="window.location.href = '/student/${resText[i].Student_id}'"/></td>\n` +
                                 "            </tr>";
                         }
                     } else
@@ -64,7 +64,7 @@
                                 `                <td>${resText[i].Second_name}</td>\n` +
                                 `                <td>${resText[i].Group}</td>\n` +
                                 "                <td><input type='button' value='Перейти'\n" +
-                                `                           onclick="window.location.href = '/student/${resText[i].Student_Id}'"/></td>\n` +
+                                `                           onclick="window.location.href = '/student/${resText[i].Student_id}'"/></td>\n` +
                                 "            </tr>";
                         }
                     } else
