--- a/pages/actions/professors_page.html
+++ b/pages/actions/professors_page.html
@@ -61,7 +61,7 @@
                                 `                <td>${resText[i].First_name}</td>\n` +
                                 `                <td>${resText[i].Second_name}</td>\n` +
                                 "                <td><input type='button' value='Перейти'\n" +
-                                `                           onclick="window.location.href = '/student/${resText[i].Professor_id}'"/></td>\n` +
+                                `                           onclick="window.location.href = '/professor/${resText[i].Professor_id}'"/></td>\n` +
                                 "            </tr>";
                         }
                     } else
