--- a/pages/students/student_page.html
+++ b/pages/students/student_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Преподаватель</title>
+    <title>Студент</title>
     <script>
         "use strict";
         window.onload = async function () {
@@ -14,28 +14,30 @@
                 let resText = await response.json();
 
                 if (resText.type === "student") {
-                    window.location.href = `/student/${resText.id}`;
+                    document.getElementById("backButton").hidden = true;
+                    document.getElementById("deleteButton").hidden = true;
+                    document.getElementById("addTestButton").hidden = true;
                 }
 
                 if (resText.type === "professor") {
+                    document.getElementById("addTestButton").hidden = true;
                     document.getElementById("deleteButton").hidden = true;
-                    if (resText.id !== locId) {
-                        document.getElementById("editButton").hidden = true;
-                        document.getElementById("logOutButton").hidden = true;
-                    }
+                    document.getElementById("editButton").hidden = true;
+                    document.getElementById("logOutButton").hidden = true;
                 }
 
                 if (resText.type === "admin") {
                     document.getElementById("logOutButton").hidden = true;
                 }
 
-                response = await fetch(`/professor/${locId}/info.json`);
+                response = await fetch(`/student/${locId}/info.json`);
                 resText = await response.json();
 
                 document.getElementById("firstName").innerText = resText.First_name;
                 document.getElementById("secondName").innerText = resText.Second_name;
+                document.getElementById("group").innerText = resText.Group;
 
-                response = await fetch(`/professor/${locId}/tests/info.json`);
+                response = await fetch(`/student/${locId}/tests/info.json`);
 
                 if (response.ok) {
                     resText = await response.json();
@@ -45,28 +47,33 @@
                     for (let i = 0; i < resText.length; i++) {
                         testsButtons.innerHTML += "<tr>\n" +
                             "                <td>\n" +
-                            `                    <input type='button' value='${resText[i].Title}'\n` +
-                            `                           onclick="window.location.href = '/professor/${resText[i].Professor_id}/test/${resText[i].Test_id}'"/>\n` +
+                            `                    <input type='button' value='${resText[i].Title}${(resText[i].Attempt_number > 1) ? ": " + resText[i].Attempt_number + " попытка" : ""}'\n` +
+                            `                           onclick="window.location.href = '/student/${locId}/test/${resText[i].Test_id}/${resText[i].Attempt_number}'"/>\n` +
                             "                </td>\n" +
                             "            </tr>";
                     }
                 }
 
+                let addTestButton = document.getElementById('addTestButton');
+                addTestButton.onclick = function () {
+                    window.location.href = `/student/${locId}/add/test`;
+                };
+
                 let editButton = document.getElementById('editButton');
                 editButton.onclick = function () {
-                    window.location.href = `/professor/${locId}/edit`;
+                    window.location.href = `/student/${locId}/edit`;
                 };
 
                 let backButton = document.getElementById('backButton');
                 backButton.onclick = function () {
-                    window.location.href = `/professors`;
+                    window.location.href = `/students`;
                 };
 
                 let deleteButton = document.getElementById('deleteButton');
                 deleteButton.onclick = async function () {
                     try {
-                        await fetch(`/professor/${locId}/delete`);
-                        window.location.href = `/professors`;
+                        await fetch(`/student/${locId}/delete`);
+                        window.location.href = `/students`;
                     } catch (err) {
                         alert(err);
                     }
@@ -81,7 +88,6 @@
                         alert(err);
                     }
                 };
-
             } catch (err) {
                 alert(err);
             }
@@ -91,20 +97,26 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Преподаватель </h2>
-    <form name="professor">
-        <div style="margin-bottom: 10px">
+    <h2> Студент </h2>
+    <form name="student">
+        <div style="margin-bottom: 5px">
             <label id="firstName"></label> <label id="secondName"></label>
         </div>
-        <table bgcolor="#f0f8ff" hidden id="testsTable" style="text-align:center; margin-bottom: 15px">
+        <div style="margin-bottom: 10px">
+            <label id="group"></label>
+        </div>
+        <table bgcolor="#f0f8ff" hidden id="testsTable" style="text-align:center; margin-bottom: 5px">
             <thead>
             <tr>
-                <th>Руководитель курсовых работ</th>
+                <th>Курсовые работы</th>
             </tr>
             </thead>
             <tbody id="testsButtons">
             </tbody>
         </table>
+        <div style="margin-bottom: 15px">
+            <input id="addTestButton" type="button" value="Добавить курсовую работу"/>
+        </div>
         <div style="margin-bottom: 10px">
             <input id="logOutButton" type="button" value="Выйти"/>
             <input id="editButton" type="button" value="Редактировать"/>
