--- a/pages/professors/professor_edit_page.html
+++ b/pages/professors/professor_edit_page.html
@@ -41,10 +41,10 @@
                 saveButton.onclick = async function () {
 
                     let professorData = {
-                        firstName: inputs[0].value,
-                        secondName: inputs[1].value,
-                        login: inputs[2].value,
-                        password: inputs[3].value
+                        firstName: inputs[0].value === resText.First_name ? "" : inputs[0].value,
+                        secondName: inputs[1].value === resText.Second_name ? "" : inputs[1].value,
+                        login: inputs[2].value === resText.Login ? "" : inputs[2].value,
+                        password: inputs[3].value === resText.Password ? "" : inputs[3].value
                     };
 
                     let options = {
