--- a/pages/students/student_edit_page.html
+++ b/pages/students/student_edit_page.html
@@ -42,11 +42,11 @@
                 let saveButton = document.getElementById("saveButton");
                 saveButton.onclick = async function () {
                     let studentData = {
-                        firstName: inputs[0].value,
-                        secondName: inputs[1].value,
-                        studentGroup: inputs[2].value,
-                        login: inputs[3].value,
-                        password: inputs[4].value
+                        firstName: inputs[0].value === resText.First_name ? "" : inputs[0].value,
+                        secondName: inputs[1].value === resText.Second_name ? "" : inputs[1].value,
+                        studentGroup: inputs[2].value === resText.Group ? "" : inputs[2].value,
+                        login: inputs[3].value === resText.Login ? "" : inputs[3].value,
+                        password: inputs[4].value === resText.Password ? "" : inputs[4].value
                     };
 
                     let options = {
