--- a/pages/professors/professor_page.html
+++ b/pages/professors/professor_page.html
@@ -14,15 +14,19 @@
                 let resText = await response.json();
 
                 if (resText.type === "student") {
-                    window.location.href = `/student/${resText.id}`;
+                    document.getElementById("addTestButton").hidden = true;
+                    document.getElementById("deleteButton").hidden = true;
+                    document.getElementById("editButton").hidden = true;
+                    document.getElementById("logOutButton").hidden = true;
                 }
 
                 if (resText.type === "professor") {
-                    document.getElementById("deleteButton").hidden = true;
                     if (resText.id !== locId) {
+                        document.getElementById("addTestButton").hidden = true;
                         document.getElementById("editButton").hidden = true;
                         document.getElementById("logOutButton").hidden = true;
                     }
+                    document.getElementById("deleteButton").hidden = true;
                 }
 
                 if (resText.type === "admin") {
@@ -40,17 +44,23 @@
                 if (response.ok) {
                     resText = await response.json();
                     document.getElementById('testsTable').hidden = false;
-                    let testsButtons = document.getElementById('testsButtons');
-                    testsButtons.innerHTML = "";
+                    let testsLines = document.getElementById('testsLines');
+                    testsLines.innerHTML = "";
                     for (let i = 0; i < resText.length; i++) {
-                        testsButtons.innerHTML += "<tr>\n" +
-                            "                <td>\n" +
-                            `                    <input type='button' value='${resText[i].Title}'\n` +
-                            `                           onclick="window.location.href = '/professor/${resText[i].Professor_id}/test/${resText[i].Test_id}'"/>\n` +
-                            "                </td>\n" +
+                        testsLines.innerHTML += "<tr>\n" +
+                            `                <td>${resText[i].Subject_title}</td>\n` +
+                            `                <td><input type='button' value='${resText[i].Title}'\n` +
+                            `                           onclick="window.location.href = '/professor/${resText[i].Professor_id}/test/${resText[i].Test_id}'"/></td>\n` +
+                            `                <td>${resText[i].Total_number_of_questions}</td>\n` +
+                            `                <td>${resText[i].Percentage_for_test_passing}</td>\n` +
                             "            </tr>";
                     }
                 }
+
+                let addTestButton = document.getElementById('addTestButton');
+                addTestButton.onclick = function () {
+                    window.location.href = `/professor/${locId}/add/test`;
+                };
 
                 let editButton = document.getElementById('editButton');
                 editButton.onclick = function () {
@@ -96,15 +106,21 @@
         <div style="margin-bottom: 10px">
             <label id="firstName"></label> <label id="secondName"></label>
         </div>
-        <table bgcolor="#f0f8ff" hidden id="testsTable" style="text-align:center; margin-bottom: 15px">
+        <table bgcolor="#f0f8ff" hidden id="testsTable" style="text-align:center; margin-bottom: 5px">
             <thead>
             <tr>
-                <th>Руководитель курсовых работ</th>
+                <th>Предмет</th>
+                <th>Тест</th>
+                <th>Всего вопросов</th>
+                <th>Процент прохождения</th>
             </tr>
             </thead>
-            <tbody id="testsButtons">
+            <tbody id="testsLines">
             </tbody>
         </table>
+        <div style="margin-bottom: 15px">
+        <input id="addTestButton" type="button" value="Добавить тест"/>
+        </div>
         <div style="margin-bottom: 10px">
             <input id="logOutButton" type="button" value="Выйти"/>
             <input id="editButton" type="button" value="Редактировать"/>
